force-app/main/default/objects/Schedule__c/fields/Amount_in_Locked_Status__c.field-meta.xml
<CustomField>
    <fullName>Amount_in_Locked_Status__c</fullName>
    <label>Amount in Locked Status</label>
    <summarizedField>Schedule_booking__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Schedule_booking__c.Status__c</field>
        <operation>equals</operation>
        <value>Locked</value>
    </summaryFilterItems>
    <summaryForeignKey>Schedule_booking__c.Schedule__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>