force-app/main/default/objects/Schedule__c/fields/Arrival_date__c.field-meta.xml
<CustomField>
    <fullName>Arrival_date__c</fullName>
    <label>Arrival date</label>
    <type>Date</type>
</CustomField>