force-app/main/default/objects/Schedule__c/fields/Dates__c.field-meta.xml
<CustomField>
    <fullName>Dates__c</fullName>
    <formula>&quot;DEP: &quot; &amp; &quot; Y &quot; &amp; TEXT(YEAR(Departure_date__c) ) &amp; &quot; Q &quot; &amp;  TEXT( CEILING( MONTH ( Departure_date__c ) / 3))  &amp; &quot; W &quot;
 &amp; TEXT(IF( 
  CEILING( ( Departure_date__c - DATE( YEAR( Departure_date__c ), 1, 1) + 1) / 7) &gt; 52,
  52,
  CEILING( ( Departure_date__c - DATE( YEAR( Departure_date__c ), 1, 1) + 1) / 7)
))
&amp; &quot;  &quot; &amp;

&quot;ARV: &quot; &amp; &quot; Y &quot; &amp; TEXT(YEAR(Arrival_date__c) ) &amp; &quot; Q &quot; &amp;  TEXT( CEILING( MONTH ( Arrival_date__c ) / 3))  &amp; &quot; W &quot;
 &amp; TEXT(IF( 
  CEILING( ( Arrival_date__c - DATE( YEAR( Arrival_date__c ), 1, 1) + 1) / 7) &gt; 52,
  52,
  CEILING( ( Arrival_date__c - DATE( YEAR( Arrival_date__c ), 1, 1) + 1) / 7)
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dates</label>
    <type>Text</type>
</CustomField>