force-app/main/default/objects/Schedule__c/fields/Days_until_departure__c.field-meta.xml
<CustomField>
    <fullName>Days_until_departure__c</fullName>
    <formula>IF(Departure_date__c &lt; TODAY() , &apos;Already departed&apos; ,  TEXT(Departure_date__c -  TODAY()) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days until departure</label>
    <type>Text</type>
</CustomField>