force-app/main/default/objects/Schedule__c/fields/Departure_date__c.field-meta.xml
<CustomField>
    <fullName>Departure_date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Departure date</label>
    <type>Date</type>
</CustomField>