force-app/main/default/objects/Schedule__c/fields/Route__c.field-meta.xml
<CustomField>
    <fullName>Route__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Route</label>
    <referenceTo>Route__c</referenceTo>
    <relationshipLabel>Schedules</relationshipLabel>
    <relationshipName>schedule_route</relationshipName>
    <type>Lookup</type>
</CustomField>