force-app/main/default/objects/Schedule__c/fields/Schedule_Status__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Status__c</fullName>
    <formula>IF( AND(Departure_date__c  &lt;  TODAY(),  Arrival_date__c &gt; TODAY()), &apos;In transit&apos;,  IF( Departure_date__c &gt; TODAY(), &apos;Before Transit&apos; ,  IF(  Arrival_date__c &lt; TODAY(), &apos;Docked&apos;, &apos;After departure&apos;) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Schedule Status</label>
    <type>Text</type>
</CustomField>