force-app/main/default/objects/Schedule__c/fields/TEU_booked_on_New_Status__c.field-meta.xml
<CustomField>
    <fullName>TEU_booked_on_New_Status__c</fullName>
    <label>TEU booked on New Status</label>
    <summarizedField>Schedule_booking__c.Declared_Teu__c</summarizedField>
    <summaryFilterItems>
        <field>Schedule_booking__c.Status__c</field>
        <operation>equals</operation>
        <value>New</value>
    </summaryFilterItems>
    <summaryForeignKey>Schedule_booking__c.Schedule__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>