force-app/main/default/objects/Schedule__c/fields/Vessel_load_with_Locked_status__c.field-meta.xml
<CustomField>
    <fullName>Vessel_load_with_Locked_status__c</fullName>
    <formula>TEU_booked_on_Locked_Status__c  /  Vessel__r.max_TEU__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vessel load with Locked status</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>