force-app/main/default/objects/Schedule__c/validationRules/Arrival_date_change_ban.validationRule-meta.xml
<ValidationRule>
    <fullName>Arrival_date_change_ban</fullName>
    <active>true</active>
    <errorConditionFormula>PRIORVALUE(Arrival_date__c) &lt; TODAY()</errorConditionFormula>
    <errorMessage>You cannot change arrival date when its after this date!</errorMessage>
</ValidationRule>