force-app/main/default/objects/Schedule__c/validationRules/Departure_and_Arrival_dates_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Departure_and_Arrival_dates_validation</fullName>
    <active>true</active>
    <errorConditionFormula>Arrival_date__c &lt;= Departure_date__c</errorConditionFormula>
    <errorMessage>Arrival date cannot be earlier than departure!</errorMessage>
</ValidationRule>