force-app/main/default/objects/Schedule__c/validationRules/Route_change_ban.validationRule-meta.xml
<ValidationRule>
    <fullName>Route_change_ban</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( Route__c )</errorConditionFormula>
    <errorMessage>Route cannot be changed!</errorMessage>
</ValidationRule>