force-app/main/default/objects/Schedule__c/validationRules/Vessel_change_allowance.validationRule-meta.xml
<ValidationRule>
    <fullName>Vessel_change_allowance</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED( Vessel__c ),(Departure_date__c - TODAY() - 7)&lt;= 0)</errorConditionFormula>
    <errorMessage>Vessel cannot be changed with less than 7 days from departure date</errorMessage>
</ValidationRule>