force-app/main/default/objects/Schedule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Departure_date__c</columns>
    <columns>Arrival_date__c</columns>
    <columns>Route__c</columns>
    <columns>Vessel__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Schedule_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>